@@ -6,7 +6,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # -------------------------------------------------------------------------
-# RCS: @(#) $Id: sum.test,v 1.1 2002/01/15 20:54:59 patthoyts Exp $
+# RCS: @(#) $Id: sum.test,v 1.2 2002/01/23 20:56:30 patthoyts Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -77,6 +77,8 @@ foreach {n msg expected} {
 
 # -------------------------------------------------------------------------
 
+set crc::testfile [info script]
+
 proc crc::loaddata {filename} {
     set f [open $filename r]
     fconfigure $f -translation binary
@@ -86,8 +88,8 @@ proc crc::loaddata {filename} {
 }
 
 test sum-4.0 {sum file option (BSD)} {
-    set r1 [crc::sum -bsd -file $::argv0]
-    set r2 [crc::sum -bsd [crc::loaddata $::argv0]]
+    set r1 [crc::sum -bsd -file $crc::testfile]
+    set r2 [crc::sum -bsd [crc::loaddata $crc::testfile]]
     if {$r1 != $r2} {
         set r "differing results: $r1 != $r2"
     } else {
@@ -96,8 +98,8 @@ test sum-4.0 {sum file option (BSD)} {
 } {ok}
 
 test sum-4.1 {sum file option (SysV)} {
-    set r1 [crc::sum -sysv -file $::argv0]
-    set r2 [crc::sum -sysv [crc::loaddata $::argv0]]
+    set r1 [crc::sum -sysv -file $crc::testfile]
+    set r2 [crc::sum -sysv [crc::loaddata $crc::testfile]]
     if {$r1 != $r2} {
         set r "differing results: $r1 != $r2"
     } else {
@@ -117,6 +119,7 @@ test sum-5.1 {sum format option (SysV)} {
 
 # -------------------------------------------------------------------------
 
+catch {unset crc::testfile}
 ::tcltest::cleanupTests
 
 # Local Variables:
